# voxel-game-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: default.config.ron  default.config.toml  default_config.toml  lookup.wgsl  voxels.wgsl
assets/items/: rifle.item.ron
assets/shaders/: simplex.wgsl  voxels.wgsl
src/: lib.rs  main.rs  simplex.wgsl  voxels.wgsl
src/engine/: controller.rs  input.rs  inventory.rs  lib.rs  lookup.rs  voxel.rs
src/qgame/: controller.rs  input.rs  inventory.rs  lookup.rs  mod.rs  voxel.rs
src/scripts/: item.rs
