[package]
name = "qgame"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.4"
bevy = { version = "0.9.1", features = ["serialize"] }
bevy_rapier3d = { version = "0.19.0", features = ["enhanced-determinism", "debug-render"] }
bytemuck = "1.7"
ron = "0.8.0"
toml = "0.5.9"
flagset = "0.4.3"
serde = "1.0.149"
smartstring = { version = "1.0.1", features = ["serde"] }
wgpu = "0.14.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"

[lib]
name = "engine"
path = "src/engine/lib.rs"

[[bin]]
name = "item"
path = "src/scripts/item.rs"
