[package]
name = "qgame"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.12.1", features = ["serialize"] }
bevy_rapier3d = { version = "0.23.0", features = ["enhanced-determinism", "debug-render"] }
bytemuck = "1.5"
ron = "0.8"
flagset = "0.4.4"
serde = "1.0"
smartstring = { version = "1.0.1", features = ["serde"] }
wgpu = { version = "0.17.1", features = ["naga"] }
thiserror = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
